--- a/Jogo.html
+++ b/Jogo.html
@@ -108,7 +108,7 @@
             const centerY = canvas.height / 2;
 
             if (side === 0) {
-                bar.width = boundary.width / 2;
+                bar.width = boundary.width * 0.8;
                 bar.height = 20;
                 bar.x = centerX - bar.width / 2;
                 bar.y = boundary.y;
@@ -116,13 +116,13 @@
                 bar.speedY = bar.speed;
             } else if (side === 1) {
                 bar.width = 20;
-                bar.height = boundary.height / 2;
+                bar.height = boundary.height * 0.8;
                 bar.x = boundary.x + boundary.width - bar.width;
                 bar.y = centerY - bar.height / 2;
                 bar.speedX = -bar.speed;
                 bar.speedY = 0;
             } else if (side === 2) {
-                bar.width = boundary.width / 2;
+                bar.width = boundary.width * 0.8;
                 bar.height = 20;
                 bar.x = centerX - bar.width / 2;
                 bar.y = boundary.y + boundary.height - bar.height;
@@ -130,7 +130,7 @@
                 bar.speedY = -bar.speed;
             } else {
                 bar.width = 20;
-                bar.height = boundary.height / 2;
+                bar.height = boundary.height * 0.8;
                 bar.x = boundary.x;
                 bar.y = centerY - bar.height / 2;
                 bar.speedX = bar.speed;
@@ -240,7 +240,7 @@
             const deltaTime = (timestamp - lastFrame) / 16.67;
             lastFrame = timestamp;
 
-            const barInterval = 1000 - Math.min(score * 10, 500);
+            const barInterval = 2000 - Math.min(score * 5, 1000);
             if (timestamp - lastTime > barInterval) {
                 createBar();
                 lastTime = timestamp;
