--- a/Jogo.html
+++ b/Jogo.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Jogo de Esquiva</title>
     <style>
         body {
@@ -238,7 +238,6 @@ function draw() {
     ctx.font = '24px Arial';
     ctx.fillText(`Pontuação: ${score}`, 10, 30);
 
-    // Informações de imunidade
     ctx.font = '18px Arial';
     ctx.fillStyle = 'yellow';
     ctx.fillText(`Imunidade: ${(immunityRemaining / 1000).toFixed(1)}s`, 10, 60);
@@ -269,7 +268,10 @@ function gameLoop(timestamp) {
 
     if (timestamp - lastTime > barInterval) {
         createBar();
-        if (score >= 10) createBar();
+        if (score >= 10) {
+            createBar(); // Segunda barra por ciclo
+            if (score >= 20) createBar(); // Terceira barra para mais desafio (opcional)
+        }
         lastTime = timestamp;
     }
 
