--- a/Jogo.html
+++ b/Jogo.html
@@ -39,7 +39,7 @@ const player = {
     immune: false,
     immuneTime: 0,
     immuneDuration: 1500,
-    immuneCooldown: 1000,
+    immuneCooldown: 750, // Alterado para 0.75 segundos
     lastImmuneEnd: 0
 };
 
@@ -97,7 +97,7 @@ function isBarOverlapping(newBar) {
 }
 
 function createBar() {
-    const axis = Math.floor(Math.random() * 2); // 0 para eixo X, 1 para eixo Y
+    const side = Math.floor(Math.random() * 4);
     let bar = {
         speed: 3 + Math.floor(score / 10) * 0.5,
         counted: false
@@ -106,34 +106,34 @@ function createBar() {
     const centerX = canvas.width / 2;
     const centerY = canvas.height / 2;
 
-    if (axis === 0) { // eixo X - barra horizontal
-        const side = Math.floor(Math.random() * 2); // 0 topo, 1 base
+    if (side === 0) {
         bar.width = boundary.width * 1.0;
         bar.height = 20;
         bar.x = centerX - bar.width / 2;
-        if (side === 0) {
-            bar.y = boundary.y;
-            bar.speedX = 0;
-            bar.speedY = bar.speed;
-        } else {
-            bar.y = boundary.y + boundary.height - bar.height;
-            bar.speedX = 0;
-            bar.speedY = -bar.speed;
-        }
-    } else { // eixo Y - barra vertical
-        const side = Math.floor(Math.random() * 2); // 0 direita, 1 esquerda
+        bar.y = boundary.y;
+        bar.speedX = 0;
+        bar.speedY = bar.speed;
+    } else if (side === 1) {
         bar.width = 20;
         bar.height = boundary.height * 1.0;
+        bar.x = boundary.x + boundary.width - bar.width;
         bar.y = centerY - bar.height / 2;
-        if (side === 0) {
-            bar.x = boundary.x + boundary.width - bar.width;
-            bar.speedX = -bar.speed;
-            bar.speedY = 0;
-        } else {
-            bar.x = boundary.x;
-            bar.speedX = bar.speed;
-            bar.speedY = 0;
-        }
+        bar.speedX = -bar.speed;
+        bar.speedY = 0;
+    } else if (side === 2) {
+        bar.width = boundary.width * 1.0;
+        bar.height = 20;
+        bar.x = centerX - bar.width / 2;
+        bar.y = boundary.y + boundary.height - bar.height;
+        bar.speedX = 0;
+        bar.speedY = -bar.speed;
+    } else {
+        bar.width = 20;
+        bar.height = boundary.height * 1.0;
+        bar.x = boundary.x;
+        bar.y = centerY - bar.height / 2;
+        bar.speedX = bar.speed;
+        bar.speedY = 0;
     }
 
     if (!isBarOverlapping(bar)) {
@@ -236,15 +236,17 @@ function draw() {
 
     ctx.fillStyle = 'white';
     ctx.font = '24px Arial';
-    const scoreText = `Pontuação: ${score}`;
-    ctx.fillText(scoreText, 10, 30);
+    ctx.fillText(`Pontuação: ${score}`, 10, 30);
+
+    // Alinhamento dos textos imunidade e recarga à direita da pontuação
+    const scoreWidth = ctx.measureText(`Pontuação: ${score}`).width;
+    const baseX = 10 + scoreWidth + 20;
 
     ctx.font = '18px Arial';
     ctx.fillStyle = 'yellow';
-    const scoreWidth = ctx.measureText(scoreText).width;
-    ctx.fillText(`Imunidade: ${(immunityRemaining / 1000).toFixed(1)}s`, 20 + scoreWidth, 30);
+    ctx.fillText(`Imunidade: ${(immunityRemaining / 1000).toFixed(1)}s`, baseX, 30);
     ctx.fillStyle = 'gray';
-    ctx.fillText(`Recarga: ${(cooldownRemaining / 1000).toFixed(1)}s`, 40 + scoreWidth + ctx.measureText(`Imunidade: ${(immunityRemaining / 1000).toFixed(1)}s`).width, 30);
+    ctx.fillText(`Recarga: ${(cooldownRemaining / 1000).toFixed(1)}s`, baseX, 50);
 
     if (gameOver) {
         ctx.fillStyle = 'white';
